SLW-331 | Fixed alignment of resources category.

--- a/themes/custom/c2d_theme/sass/5.components/components.lister_page.view_documents.scss
+++ b/themes/custom/c2d_theme/sass/5.components/components.lister_page.view_documents.scss
@@ -36,18 +36,20 @@
       }
       .content-header-text {
         font-size: 14px;
+        line-height: 1.3;
         font-weight: 600;
         margin: 1.9rem 2.8rem 1.3rem 2.6rem;
         display: flex;
-        align-items: center;
+        align-items: baseline;
         .field--name-created {
           @include text-small-bold;
+          white-space: nowrap;
         }
         .category-link {
           a {
             color: $color-turquoise;
             font-family: Montserrat;
-            text-decoration: none solid rgb(38, 201, 222);
+            text-decoration: none;
             line-height: 19px;
             font-weight: 600;
             font-size: 14px;
@@ -58,7 +60,7 @@
         font-family: $font-montserrat;
         color: $color-blue-gray;
         font-size: 1.8rem;
-        text-decoration: none solid $color-blue-gray;
+        text-decoration: none;
         line-height: 2.2rem;
         margin: 2.6rem 4.6rem 3.3rem 2.6rem;
         display: block;
